[package]
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"
name = "oon_db"
version = "0.1.0"

[dependencies]
chrono = "0.4"
diesel = { version = "1.4", features = ["chrono", "network-address", "postgres", "r2d2", "uuidv07"] }
diesel_migrations = "1.4"
ipnetwork = "0.15"
rand = "0.7"
uuid = "0.7"
