[package]
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"
name = "oon_scraper"
version = "0.1.0"

[dependencies]
futures-preview = "0.3.0-alpha.19"
itertools = "0.8"
oon_db = { version = "0.1", path = "../oon_db" }
reqwest = { version = "0.10.0-alpha.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2.0-alpha.5"
tokio-executor = "0.2.0-alpha.5"
uuid = "0.7"
