[package]
name = "oon_web"
version = "0.1.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"

[dependencies]
oon_db = { version = "0.1", path = "../oon_db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2.0-alpha.5"
tokio-executor = "0.2.0-alpha.5"
uuid = { version = "0.7", features = ["serde"] }
warp = { git = "https://github.com/seanmonstar/warp/", rev = "5c269562a823c5340f3dfc14bdd11af592c03dea" }
