[package]
name = "oon_web"
version = "0.1.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"

[dependencies]
env_logger = "0.7"
log = "0.4"
oon_db = { version = "0.1", path = "../oon_db" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.23", features = ["full"] }
uuid = { version = "0.8", features = ["serde"] }
warp = "0.3"
